Changed Articles to Reviews page, Fixed some header bugs and shortened the space between Logo and Nav Links for better visibility

--- a/project-8-personal-mini-project/mentee-version/commons.css
+++ b/project-8-personal-mini-project/mentee-version/commons.css
@@ -16,10 +16,9 @@ header {
   width: 100%;
   height: 10vh;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   justify-self: center;
-  background-color: rgba(0, 0, 0, 1);
-  
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 header nav ul {
@@ -48,19 +47,6 @@ nav a:active {
   color: white;
 }
 
-header {
-  display: flex;
-  color: white;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
-  padding: 30px;
-  width: 100%;
-  height: 10vh;
-  align-items: center;
-  justify-content: space-between;
-  justify-self: center;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
 footer {
   position: fixed;
   left: 0;
@@ -69,7 +55,7 @@ footer {
   color: white;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
   text-align: center;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(0, 0, 0, 0.6);
   padding: 15px;
   height: 5vh;
 }
